<resources>
    <string name="app_name">Leave Management System</string>
    <string name="connecting_to_your_account">Connecting to your account...</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="log_out">Log out</string>
    <string name="login_google">Login with your Infrrd account</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="login_details_error">Cannot fetch user data at the moment</string>
    <string name="wrong_login_credentials_error">Your login credentials haven\'t been activated yet. Please contact the HR.</string>
    <string name="username">username</string>
    <string name="remaining">Remaining</string>
    <string name="leave_balance">Leave balance</string>
    <string name="spent">Spent</string>
    <string name="applied_leaves">Applied leaves</string>
    <string name="leaves_taken">Leaves taken</string>
    <string name="dashboard">Dashboard</string>
    <string name="profile">Profile</string>
    <string name="apply_leave">Apply leave/Comp off</string>
    <string name="apply_wfh">Apply WFH</string>
    <string name="leave_history">Leave history</string>
    <string name="leave_report">Leave report</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_add">Add</string>
    <string name="action_apply">Apply</string>
    <string name="about">About</string>
    <string name="skillsViewHolder">Skills</string>
    <string name="experience">Experience</string>
    <string name="education">Education</string>
    <string name="leave_type">Leave type</string>
    <string name="sick_leave">Sick</string>
    <string name="casual_leave">Casual</string>
    <string name="comp_off">Comp off</string>
    <string name="advanced_leave">Advanced leave</string>
    <string name="work_from_home">Work from home</string>
    <string name="date_range">Date range</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="no_of_working_days">Number of working dates</string>
    <string name="leave_composition">Leave composition</string>
    <string name="leave_comments">Leave comments</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="sick_leave_warning">Sick leave can only be applied for today</string>
    <string name="select_start_date_first">Select start date first</string>
    <string name="wfh_warning">Work from home can only be applied for today</string>
    <string name="comp_off_warning">Comp off can only be applied for today</string>
    <string name="label_birthday">Birthday:</string>
    <string name="label_email">Email:</string>
    <string name="label_city">City:</string>
    <string name="label_interests">Interests:</string>
    <string name="label_website">Website:</string>
    <string name="label_phone">Phone:</string>
    <string name="half_day">Half day</string>
    <string name="full_day">Full day</string>
    <string name="today">Today</string>
    <string name="retrofit_error_message">No connection to the API could be established.</string>
    <string name="edit_experience">Edit experience</string>
    <string name="edit_education">Edit education</string>
    <string name="edit_skills">Edit skills</string>
    <string name="employer_name">Employer name</string>
    <string name="designation">Designation</string>
    <string name="duration">Duration</string>
    <string name="date">date</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="enter">Enter</string>
    <string name="date_range_error">Start date cannot be greater than end date</string>
    <string name="fetching_leave_details">Fetching your leave data...</string>
    <string name="fetching_profile_details">Fetching your profile data...</string>
    <string name="fetching_dashboard_details">Fetching your dashboard data...</string>
    <string name="fetching_wfh_details">Fetching your WFH data...</string>
    <string name="applying_for_leave">Applying for leave...</string>
    <string name="leave_applied_successfully">Leave applied successfully</string>
    <string name="wfh_applied_successfully">WFH applied successfully</string>
    <string name="fetched_wfh_details_successfully">Fetched your WFH data successfully...</string>
    <string name="fetched_dashboard_details_successfully">Fetched your dashboard data successfully...</string>
    <string name="earned_leaves">Earned leaves</string>
    <string name="loss_of_pay">Loss of pay</string>
    <string name="lop">LOP</string>
    <string name="advanced">Advanced</string>
    <string name="date_already_exists_error">You have already applied for a leave in the date range</string>
    <string name="insufficient_leave_balance">You have insufficient leave balance. Please apply for LOP or advanced leaves</string>
    <string name="select_your_leave_composition">Please enter details</string>
    <string name="please_enter_a_comment">Please enter a comment</string>
    <string name="enter_start_end_dates">Please enter start and end dates</string>
    <string name="please_enter_first_name">Please enter first name</string>
    <string name="please_enter_last_name">Please enter last name</string>
    <string name="please_enter_valid_url">Please enter a valid URL</string>
    <string name="please_enter_valid_date">Please enter a valid date in dd/MM/yyyy format</string>
    <string name="please_enter_user_name">Please enter a valid user name</string>
    <string name="please_enter_password">Please enter the password</string>
    <string name="save">Save</string>
    <string name="institution_name">Institution name</string>
    <string name="degree">Degree</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="personal_information">Personal information</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="twitter">Twitter</string>
    <string name="facebook">Facebook</string>
    <string name="google_plus">Google+</string>
    <string name="label_date_of_birth">Date of Birth:</string>
    <string name="label_mobile_number">Mobile Number:</string>
    <string name="label_country">Country:</string>
    <string name="label_twitter">Twitter:</string>
    <string name="label_facebook">Facebook:</string>
    <string name="label_google_plus">Google+:</string>
    <string name="enter_your_reason">Enter your reason</string>
    <string name="saving_your_personal_details">Saving your personal details...</string>
    <string name="saving_your_experience_details">Saving your experience details...</string>
    <string name="saving_your_education_details">Saving your education details...</string>
    <string name="saving_your_skills_details">Saving your skills details...</string>
    <string name="personal_details_saved">Personal details saved</string>
    <string name="experience_details_saved">Experience details saved</string>
    <string name="education_details_saved">Education details saved</string>
    <string name="skill_details_saved">Skill details saved</string>
    <string name="skills">Skills</string>
    <string name="choose_your_skills">Choose your skills</string>
    <string name="available_balance">Available Balance</string>
    <string name="all">All</string>
    <string name="credited">Credited</string>
    <string name="records_label">Records:</string>
    <string name="yes">Yes</string>
    <string name="okay">Okay</string>
    <string name="retry">Retry</string>
    <string name="choose_from_gallery">Choose from gallery</string>
    <string name="take_a_photo">Take a photo</string>
    <string name="no_records_found">No records found.</string>
    <string name="no_internet_connection_error">No internet connection detected. Please connect to a network and retry.</string>
    <string name="camera_permission_rationale">Need permission for camera to update profile image.</string>
    <string name="external_storage_permission_rationale">Need permission for access to external storage to update profile image.</string>
    <string name="camera_external_storage_permission_rationale">Need permissions to update profile image.</string>
</resources>
